[package]
name = "Hasher-Gui"
version = "0.1.5"
authors = ["xl350r <danhsecure@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = '0.6.0'
rust-crypto = "0.2.36"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
threadpool = "1.7.1"
clipboard = "0.5.0"

[profile.release]
lto = true
panic = 'abort'
